--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodJP</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main class="container">
@@ -47,7 +47,7 @@
                 <div>
                     <img src="/img/segurando_prato.png">
                 </div>
-                <div>
+                <div class="presentation-description">
                     <h3>
                         Feita de forma Tradicional
                     </h3>
