--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoodJP</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <main class="container">
@@ -45,7 +45,7 @@
         <section>
             <div class="presentation">
                 <div>
-                    <img src="/img/segurando_prato.png">
+                    <img src="./img/segurando_prato.png">
                 </div>
                 <div class="presentation-description">
                     <h3>
