more-popular section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,28 @@
                 </div>
             </div>
         </section>
+        <section class="more-popular">
+            <h3>Mais populares</h3>
+            <div class="card">
+                <img src="./img/prato1.png">
+                <h2>Ramen de Frango</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <span>R$ 30</span>
+            </div>
+            <div class="card">
+                <img src="./img/prato2.png">
+                <h2>Ramen Apimentado</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <span>R$ 30</span>
+            </div>
+            <div class="card">
+                <img src="./img/prato3.png">
+                <h2>Ramen Tradicional</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <span>R$ 30</span>
+            </div>
+
+        </section>
 
 
     </main>    
