--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         </header>
 
-        <section>
+        <section class="food-head-container">
             <div class="orientalfood">
                 <h1>Comida Oriental</h1>
                 <p>
@@ -41,10 +41,13 @@
 
                 <input class="btn-menu" type="button" value="Cardápio">
             </div>
+            <div>
+                <img src="./img/japa.png">
+            </div>
         </section>
         <section>
             <div class="presentation">
-                <div>
+                <div class="img-container">
                     <img src="./img/segurando_prato.png">
                 </div>
                 <div class="presentation-description">
