class presentation 993 responsive

--- a/index.html
+++ b/index.html
@@ -51,16 +51,18 @@
                     <img src="./img/segurando_prato.png">
                 </div>
                 <div class="presentation-description">
-                    <h3>
-                        Feita de forma Tradicional
-                    </h3>
+                    <div>
+                        <h3>
+                            Feita de forma Tradicional
+                        </h3>
 
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
-                    </p>
-                    <a href="#">
-                        Ler mais sobre o modo de preparo
-                    </a>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
+                        </p>
+                        <a href="#">
+                            Ler mais sobre o modo de preparo
+                        </a>
+                    </div>    
                 </div>
             </div>
         </section>
