--- a/index.html
+++ b/index.html
@@ -89,6 +89,25 @@
 
         </section>
 
+        <section>
+            <div>
+                <div class="card-coment">
+                    <img src="./img/profile2.png" alt="profile1">
+                    <h4>Daniele Almeida</h4>
+                    <p>Ótimo serviço! Encantada com a qualidade dos pratos.</p>
+                    <img src="./img/Vector.png" alt="start">
+                </div>
+
+                <div>
+                    <img src="./img/profile1.png" alt="profile1">
+                    <h4>Ricardo França</h4>
+                    <p>Não é apenas a comida execelente, o serviço torna a expêriencia especial.</p>
+                    <img src="./img/Vector.png" alt="start">
+                    
+                </div>
+            </div>
+        </section>
+
 
     </main>    
 </body>
